[package]
name = "axiom-keccak"
version = "0.1.0"
edition = "2021"

[dependencies]
axiom-circuit = "0.1.1"
axiom-sdk = "0.1.1"
axiom-sdk-derive = "0.1.1"
ethers = "2.0"
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
clap = { version = "4.4.7", features = ["derive"] }
clap-num = "=1.0.2"
serde_json = "1.0.111"
log = "0.4"
env_logger = "0.9"
bincode = "1.3.3"
